# cosmicpython-in-rust

./: .gitignore  README.md
.github/workflows/: ci.yml  coverage.yml
apps/webapp/: Cargo.toml
apps/webapp/src/: startup.rs
apps/webapp/src/routes/: mod.rs
apps/webapp/tests/: api.rs
libs/domain/: Cargo.toml
libs/domain/src/: error.rs  lib.rs  model.rs  repository.rs
libs/infrastructure/: Cargo.toml
libs/infrastructure/migrations/: 20220711144817_batches.sql  20220711144907_order_lines.sql  20220711145023_allocations.sql
libs/infrastructure/src/: lib.rs
libs/infrastructure/src/repositories/: mod.rs  sqlx_batches.rs
libs/infrastructure/tests/: repository.rs
