[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.12"
tokio = { version = "1.19", features = ["rt-multi-thread", "macros"]}
sqlx = { version = "^0.6", features = ["sqlite", "runtime-tokio-rustls", "chrono", "migrate", "macros"], default-features = false }
infrastructure = { path = "../../libs/infrastructure" }
domain = { path = "../../libs/domain" }
serde = { version = "1", features = ["derive"] }
serde_json = "*"

[dev-dependencies]
rand = "0.8.5"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"]}
