[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "^0.6", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"], default-features = false }
tokio = { version = "^1.17", features = ["rt-multi-thread", "macros"] }
